atlassian/atlassian-dc/confluence/confluence-node2.yaml
apiVersion: v1    # confluence Deployment for node 2
kind: Pod
metadata:
  labels:
    app: confluence
  name: confluence-node2
spec:
  restartPolicy: Always
  containers:
    - name: confluence-node2
      image: "agiletrailblazers/confluence-server:7.3.3"
      ports:
        - containerPort: 8090
      resources:
        limits:
          cpu: "4"
          memory: "12G"
        requests:
          cpu: "2"
          memory: "6G"
      volumeMounts:
        - name: "confluence-home"
          mountPath: /var/atlassian/application-data/confluence
        - name: "confluence-shared-home"
          mountPath: /var/atlassian/application-data/confluence/shared-home
  volumes:
    - name: confluence-home
      persistentVolumeClaim:
        claimName: confluence-home-node2-pv-claim
    - name: confluence-shared-home
      persistentVolumeClaim:
        claimName: confluence-shared-home-pv-claim
---           #Provide authorization for confluence
apiVersion: rbac.authorization.k8s.io/v1beta1
kind: ClusterRoleBinding
metadata:
  name: confluence-k8-calls
subjects:
  - kind: ServiceAccount
    # Reference to upper's `metadata.name`
    name: default
    # Reference to upper's `metadata.namespace`
    namespace: confluence
roleRef:
  kind: ClusterRole
  name: cluster-admin
  apiGroup: rbac.authorization.k8s.io
