atlassian/atlassian-dc/confluence/confluence-service.yaml
apiVersion: v1                #confluence Service
kind: Service
metadata:
  name: confluence-service
  labels:
    app: confluence-service
spec:
  type: NodePort
  ports:
   - port: 8090
  selector:
   app: confluence
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
---
apiVersion: v1                #PostgreSQL Service
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: postgres
