atlassian/atlassian-dc/confluence/confluence.yaml
apiVersion: v1    # confluence Deployment for node 1
kind: Pod
metadata:
  labels:
    app: confluence
  name: confluence-node1
spec:
  containers:
    - name: confluence-node1
      image: "agiletrailblazers/confluence-server:7.3.3"
      ports:
        - containerPort: 8090
      resources:
        limits:
          cpu: "3"
          memory: "8G"
        requests:
          cpu: "2"
          memory: "4G"
      volumeMounts:
        - name: "confluence-home"
          mountPath: /var/atlassian/application-data/confluence
        - name: "confluence-shared-home"
          mountPath: /var/atlassian/application-data/confluence/shared-home
  volumes:
    - name: confluence-home
      persistentVolumeClaim:
        claimName: confluence-home-node1-pv-claim
    - name: confluence-shared-home
      persistentVolumeClaim:
        claimName: confluence-shared-home-pv-claim
---
apiVersion: v1    # confluence Deployment for node 2
kind: Pod
metadata:
  labels:
    app: confluence
  name: confluence-node2
spec:
  containers:
    - name: confluence-node2
      image: "agiletrailblazers/confluence-server:7.3.3"
      ports:
        - containerPort: 8090
      resources:
        limits:
          cpu: "3"
          memory: "8G"
        requests:
          cpu: "2"
          memory: "4G"
      volumeMounts:
        - name: "confluence-home"
          mountPath: /var/atlassian/application-data/confluence
        - name: "confluence-shared-home"
          mountPath: /var/atlassian/application-data/confluence/shared-home
  volumes:
    - name: confluence-home
      persistentVolumeClaim:
        claimName: confluence-home-node2-pv-claim
    - name: confluence-shared-home
      persistentVolumeClaim:
        claimName: confluence-shared-home-pv-claim

---
apiVersion: v1                #confluence Service
kind: Service
metadata:
  name: confluence-service
  labels:
    app: confluence-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8090
  selector:
    app: confluence
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
  type: LoadBalancer

---           #Provide authorization for confluence
apiVersion: rbac.authorization.k8s.io/v1beta1
kind: ClusterRoleBinding
metadata:
  name: confluence-k8-calls
subjects:
  - kind: ServiceAccount
    # Reference to upper's `metadata.name`
    name: default
    # Reference to upper's `metadata.namespace`
    namespace: confluence
roleRef:
  kind: ClusterRole
  name: cluster-admin
  apiGroup: rbac.authorization.k8s.io
