atlassian/atlassian-dc/confluence/confluence-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: confluence-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "confluence-session"
    nginx.ingress.kubernetes.io/session-cookie-expires: "1000"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "1000"
spec:
  tls:
    - hosts:
      - confluence.agiletrailblazers.com
      secretName: atb-certs
  rules:
  - host: confluence.agiletrailblazers.com
    http:
      paths:
      - path: /
        backend:
          serviceName: confluence-service
          servicePort: 8090
